GET all roles is working perfectly
