# src/main/resources/contract/api.yaml
@@ -10,21 +10,27 @@ paths:
   /roles:
     get:
       summary: Obtener todos los roles
+      description: "Solo los usuarios con rol ADMIN pueden obtener todos los roles."
       operationId: getRoles
       tags:
         - Roles
       security:
         - bearerAuth: []
-      description: "Solo los usuarios con rol ADMIN pueden obtener todos los roles."
       responses:
-        '200':
-          description: Lista de roles obtenida con éxito
+        "200":
+          description: OK
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/RoleListResponse'
+                type: object
+                title: RoleResponse
+                properties:
+                  Roles:
+                    type: array
+                    description: Lista de roles
+                    items:
+                      $ref: "#/components/schemas/Role"
+
         '401':
           description: No autorizado (Unauthorized)
           content:
@@ -43,35 +49,35 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
-
+  /roles/{idRole}:
     put:
       summary: Actualizar un rol existente
-      operationId: updateRole
+      description: "Solo los usuarios con rol ADMIN pueden actualizar un rol."
+      operationId: putRoleId
       tags:
         - Roles
+      parameters:
+        - in: path
+          name: idRole
+          required: true
+          schema:
+            type: string
+          description: identificador del rol
       security:
         - bearerAuth: []
-      description: "Solo los usuarios con rol ADMIN pueden actualizar un rol."
       requestBody:
         required: true
         content:
           application/json:
             schema:
-              type: object
-              properties:
-                idRole:
-                  type: integer
-                  example: 1
-                roleName:
-                  type: string
-                  example: "ADMIN"
+              $ref: "#/components/schemas/Role"
       responses:
         '200':
           description: Rol actualizado con éxito
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/RoleResponse'
+                $ref: '#/components/schemas/Role'
         '400':
           description: Datos inválidos enviados
           content:
@@ -103,6 +109,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
 
+
 components:
   securitySchemes:
     bearerAuth:
@@ -110,7 +117,8 @@ components:
       scheme: bearer
       bearerFormat: JWT
   schemas:
-    RoleResponse:
+
+    Role:
       type: object
       properties:
         idRole:
@@ -120,10 +128,7 @@ components:
         roleName:
           type: string
           description: Nombre del rol
-    RoleListResponse:
-      type: array
-      items:
-        $ref: '#/components/schemas/RoleResponse'
+
     ErrorResponse:
       type: object
       properties:
